...

    <!-- Game screen -->
    <string name="game_screen_title_local">Lets play TicTacToe</string>
    <string name="game_screen_title_distributed_challenger_waiting">Waiting for contender</string>
    <string name="game_screen_title_distributed_challenger_playing">Playing against contender</string>
    <string name="game_screen_title_distributed_contender">Playing %s</string>
    <string name="game_start_button_label">Start</string>
    <string name="game_forfeit_button_label">Forfeit</string>
    <string name="game_menu_about_label">About</string>
    <string name="game_menu_challenges_label">Challenges</string>

    <string name="game_initial_message">Press Start to begin play</string>
    <string name="game_turn_message">Turn: %s</string>
...
